Fix controls cutoff at smaller viewports #198864876197682

--- a/public/editor/modules/content/editor-controls-iframe/css/controls/controls.less
+++ b/public/editor/modules/content/editor-controls-iframe/css/controls/controls.less
@@ -242,6 +242,13 @@
       left: 0;
     }
   }
+  //== controls from left side
+  &.vcv-ui-controls-o-controls-right {
+    .vcv-ui-outline-controls {
+      left: auto;
+      right: 0;
+    }
+  }
 
 }
 
